[gd_scene load_steps=5 format=2]

[ext_resource path="res://plateaux/Plateau.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.343, 21.945 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63.8092, 17.4651 )

[node name="Plateau" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 0.56 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_Plateau_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Plateau_mouse_exited"]
[connection signal="body_entered" from="Zone" to="." method="_on_Zone_body_entered"]
